<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_family_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/str_familydetails"
                        android:textColor="@color/white" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <Spinner
                            android:id="@+id/spin_title_familydetails"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:entries="@array/spin_title"
                            android:foregroundTint="#222" />

                        <EditText
                            android:id="@+id/et_familymember_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".8"
                            android:hint="Enter Name"
                            android:inputType="textCapCharacters"></EditText>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/et_familymember_adharid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Aadhar Id"
                        android:inputType="textCapCharacters"
                        android:maxLines="1"></EditText>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_uidai_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/str_uidaidetails"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_uidai_noobjections"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/radioGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/genderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="YES" />

                            <RadioButton
                                android:id="@+id/genderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="NO" />
                        </RadioGroup>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_bankDetails"
                            android:textStyle="bold" />


                        <RadioGroup
                            android:id="@+id/radioBank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/bankOne"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/str_bankOne" />

                            <RadioButton
                                android:id="@+id/bankTwo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_bankTwo" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <EditText
                            android:id="@+id/et_bank_state"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:hint="Enter State "
                            android:inputType="textCapCharacters"></EditText>

                        <EditText
                            android:id="@+id/et_ifsc_code"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:hint="Enter IFSC CODE"
                            android:inputType="textCapCharacters"></EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <EditText
                            android:id="@+id/et_bankBranch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:hint="Enter Branch "
                            android:inputType="textCapCharacters"></EditText>

                        <EditText
                            android:id="@+id/et_accountNo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:hint="Enter Account No"
                            android:inputType="textCapCharacters"></EditText>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_tab_uidaidetails_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/prev_tab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Prev"
                        android:textColor="@color/white"
                        android:theme="@style/MyButton" />

                    <Button
                        android:id="@+id/next_tab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="Next"
                        android:textColor="@color/white"
                        android:theme="@style/MyButton" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>